--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,7 +88,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="564dp"
-        android:text="Endless Crusin"
+        android:text="Endless Crusin'"
         android:textSize="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
